# NeuroRAT

./: .env  .gitignore  CLAUDE_CODING_BEST_PRACTICES.md  Clone_AutoDev_Plan.md  DEVELOPMENT_PLAN.md  DEV_NOTES.md  Dev_Notes.md  Dockerfile  Dockerfile.agent  Dockerfile.c2  Dockerfile.dns  NeuroZond_Project_Overview.md  README.md  dev-notes.md  docker-compose.yml  fix-ui-linter.sh  fix_dns_server.py  pytest.ini  python_path.py  requirements-dev.txt  requirements.txt  secret_dev_notes.md  test_base32.py  test_import.py
.cursor/rules/: agent.mdc
.github/workflows/: ci.yml
OLD FILES (ANALIZE&Intagrate))/: neurozond.py
OLD FILES (ANALIZE&Intagrate))/agent_modules/: __init__.py  advanced_evasion.py  ats_bank_connector.py  ats_module.py  bank_integration.py  browser_stealer.py  credential_flusher.py  crypto_stealer.py  dockerhub_injector.py  dockerhub_supply_chain.py  environment_manager.py  file_manager.py  file_stealer.py  github_injector.py  github_supply_chain.py  keylogger.py  module_loader.py  network_obfuscation.py  npm_injector.py  npm_supply_chain.py  offensive_tools.py  pypi_injector.py  ransomware_stealer.py  screen_capture.py  sn1per_wrapper.py  supply_chain_infection.py  swarm_intelligence.py  system_stealer.py  test_advanced_evasion.py  test_file_stealer.py
OLD FILES (ANALIZE&Intagrate))/agent_modules/edr_evasion/: lsass_dump.py
OLD FILES (ANALIZE&Intagrate))/agent_modules/injection/: process_hollowing.py
OLD FILES (ANALIZE&Intagrate))/agent_modules/tests/: test_ats_module.py  test_bank_integration.py
OLD FILES (ANALIZE&Intagrate))/agent_protocol/: README.md  ROADMAP.md  USAGE.md  __init__.py  agent.py  client.py  demo.py  neurorat.py  requirements.txt
OLD FILES (ANALIZE&Intagrate))/agent_protocol/client/: __init__.py  agent_client.py  client.py  controller.py
OLD FILES (ANALIZE&Intagrate))/agent_protocol/examples/: README.md  agent_integration.py  example_module.py  neurorat_server.py  server_handler.py
OLD FILES (ANALIZE&Intagrate))/agent_protocol/modules/: av_evasion.py  llm_interface.py
OLD FILES (ANALIZE&Intagrate))/agent_protocol/server/: __init__.py  agent_server.py  install.sh  remote_agent.py  server.py
OLD FILES (ANALIZE&Intagrate))/agent_protocol/shared/: communication.py  encryption.py  key_exchange.py  protocol.py
OLD FILES (ANALIZE&Intagrate))/builders/: advanced_builder.py  build_agent.py  build_agent_fixed.py  exploits_generator.py  phantom_builder  phantom_builder.c  stage0.asm  win_agent_loader.py
OLD FILES (ANALIZE&Intagrate))/core/: agent_thinker.py  autonomous_brain.py  botnet_controller.py  c1_brain.py
OLD FILES (ANALIZE&Intagrate))/neurozond/: .gitignore  Makefile  README.md  build.sh  covert_channel.c  main.c
OLD FILES (ANALIZE&Intagrate))/neurozond/command/: command_executor.c
OLD FILES (ANALIZE&Intagrate))/neurozond/crypto/: crypto_utils.c  crypto_utils.h
OLD FILES (ANALIZE&Intagrate))/neurozond/docs/: command_executor.md
OLD FILES (ANALIZE&Intagrate))/neurozond/examples/: command_executor_example.c  covert_channel_example.c  edr_evasion_demo.c  process_masquerading_demo.c
OLD FILES (ANALIZE&Intagrate))/neurozond/executor/: command_executor.c
OLD FILES (ANALIZE&Intagrate))/neurozond/include/: command_executor.h  covert_channel.h  https_channel.h  injection.h
OLD FILES (ANALIZE&Intagrate))/neurozond/injection/: process_hollowing.c
OLD FILES (ANALIZE&Intagrate))/neurozond/network/: covert_channel.c  covert_channel.h  crypto_channel.c  crypto_channel.h  dns_channel.c  https_channel.c  icmp_channel.c  main.c
OLD FILES (ANALIZE&Intagrate))/neurozond/src/: command_executor.c
OLD FILES (ANALIZE&Intagrate))/neurozond/tests/: Makefile  edr_evasion_test.c  test_crypto.c  (+11 more)
agent_implant/cpp_injector/: injector.cpp  injector.h
agent_implant/stager/: CMakeLists.txt  stager.cpp  stager.h
agentx-c1/: Dockerfile  README.md  README_C2_Integration.md  api_integration.py  demo_botnet_control.py  init_c2_integration.py  main.py  requirements.txt  run_c1_c2.py  temp.txt  test_c1_c2_integration.py
agentx-c1/config/: logger_config.py
agentx-c1/core/: agent_memory.py  agent_state.py  botnet_controller.py  builder.py  c1_brain.py  c2_controller.py  c2_prompts.py  llm_processor.py  neurorat_agent.py  neurorat_chat.py  neurorat_consciousness.py  zond_protocol.py
agentx-c1/shared/: enhanced_communication.py
agentx-ui/: nginx.conf  package-lock.json  package.json  vite.config.ts
agentx-ui/src/: App.tsx  main.tsx
reports/: report.json  scan_scanme_nmap_org_20250429_121631.json
sample_configs/: config.json
scripts/: refactor_loggers.py  test_imports.py
src/: autonomous_agent.py  autonomous_contract_scanner.py  c1_exploit_integration.py  celery_app.py  channel_manager.py  crypto_drainer_results.json  demo.py  demo_crypto_drainer.py  demo_exploit_automation.py  dns_server.py  exploit_automation.py  exploit_engine.py  exploit_manager.py  host_scanner.py  main.py  polymorpher.py  port_scanner.py  prometheus_client.py  report_generator.py  requirements.txt  service_detector.py  steganography.py  tasks.py  vulnerability_scanner.py  web_scanner.py
src/agent_protocol/: protocol.py
src/api/: app.py  exploit.py
src/c2_server/: c2_server.py
src/common/: __init__.py  utils.py
src/comms/: comms.py
src/core/: config.py
src/modules/: README.md  __init__.py  advanced_scanner.py  crypto.py  crypto_drainer.py  dns_tunnel.py  dropper.py  https_tunnel.py  icmp_tunnel.py  poly_morpher.py  process_hollowing.py  propagator.py  steganography.py  stego_tunnel.py  web3_contract_analyzer.py  web3_drainer.py
src/native/: CMakeLists.txt
src/native/cpp_injector/: CMakeLists.txt  ReflectiveLoader.c  injector.cpp  injector.h  mingw-w64-toolchain.cmake
src/stealth/: stealth.py
src/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_build_pipeline.py  test_exploit_api.py  test_integration.py  test_poly_morpher.py
src/utils/: blockchain_utils.py  reporting.py
src/worm/: propagation.py  worm_core.py
test_payloads/reflective_dll_test/: CMakeLists.txt  ReflectiveLoader.c  ReflectiveLoader.h  payload_dll.cpp
(+81 files in other folders)
